append fragment ui 2, solve the communication problem between fragments

--- a/app/src/main/res/layout/fragment_append.xml
+++ b/app/src/main/res/layout/fragment_append.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.servicecreate.ui.append.AppendViewModel" />
+            type="com.example.servicecreate.ui.home.append.AppendViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
