--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.servicecreate.ui.home.HomeViewModel" />
+            type="com.example.servicecreate.ui.home.home.HomeViewModel" />
     </data>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background_color"
-        tools:context=".ui.home.HomeFragment">
+        tools:context=".ui.home.home.HomeFragment">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
