--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,60 +3,66 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent"
-        android:orientation="vertical"
-        tools:context=".ui.MainActivity">
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.servicecreate.ui.home.home.HomeViewModel" />
+    </data>
 
-        <FrameLayout
-            android:id="@+id/container_fragment"
+    <FrameLayout
+        android:id="@+id/top_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="11" />
+            android:background="@android:color/transparent"
+            android:orientation="vertical"
+            tools:context=".ui.MainActivity">
+            <FrameLayout
+                android:id="@+id/container_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="11" />
 
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottomAppBar"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:layout_gravity="bottom"
-            android:backgroundTint="@color/white"
-            android:outlineProvider="none"
-            app:fabCradleMargin="10dp"
-            app:fabAlignmentMode="center"
-            app:hideOnScroll="false">
-
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottomNavigationView"
+            <com.google.android.material.bottomappbar.BottomAppBar
+                android:id="@+id/bottomAppBar"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
-                android:layout_marginHorizontal="16dp"
-                android:background="@android:color/transparent"
+                android:layout_gravity="bottom"
+                android:backgroundTint="@color/white"
                 android:outlineProvider="none"
-                app:itemRippleColor="@color/main_color"
-                app:labelVisibilityMode="auto"
-                app:menu="@menu/nav_menu" />
+                app:fabCradleMargin="10dp"
+                app:fabAlignmentMode="center"
+                app:hideOnScroll="false">
 
-        </com.google.android.material.bottomappbar.BottomAppBar>
+                <com.google.android.material.bottomnavigation.BottomNavigationView
+                    android:id="@+id/bottomNavigationView"
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:background="@android:color/transparent"
+                    android:outlineProvider="none"
+                    app:itemRippleColor="@color/main_color"
+                    app:labelVisibilityMode="auto"
+                    app:menu="@menu/nav_menu" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/float_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/main_color"
-            android:backgroundTint="@color/main_color"
-            android:backgroundTintMode="screen"
-            android:contentDescription="@string/float_add_device"
-            android:outlineProvider="none"
-            android:src="@drawable/ic_round_add_24"
-            app:hideMotionSpec="@anim/ps_anim_album_dismiss"
-            app:borderWidth="0dp"
-            app:layout_anchor="@id/bottomAppBar">
+            </com.google.android.material.bottomappbar.BottomAppBar>
 
-        </com.google.android.material.floatingactionbutton.FloatingActionButton>
-
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/float_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/main_color"
+                android:backgroundTint="@color/main_color"
+                android:backgroundTintMode="screen"
+                android:contentDescription="@string/float_add_device"
+                android:outlineProvider="none"
+                android:src="@drawable/ic_round_add_24"
+                app:hideMotionSpec="@anim/ps_anim_album_dismiss"
+                app:borderWidth="0dp"
+                app:layout_anchor="@id/bottomAppBar"/>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </FrameLayout>
 </layout>
