--- a/app/src/main/res/layout/item_exhibit_room_card.xml
+++ b/app/src/main/res/layout/item_exhibit_room_card.xml
@@ -3,19 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
-        android:id="@+id/item_card_home"
+        android:id="@+id/item_card_exhibit"
         app:cardCornerRadius="15dp"
         android:layout_width="match_parent"
         android:layout_margin="5dp"
         android:padding="5dp"
-        android:layout_height="wrap_content"
+        android:layout_height="180dp"
         android:elevation="@dimen/ui_elevation_height"
         style="@style/MaterialAlertDialog.Material3">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="10dp">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/item_card_room_image"
@@ -43,13 +42,13 @@
                 android:id="@+id/item_card_room_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
                 android:text="Bedroom"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="19sp"
                 android:textStyle="bold"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/item_card_room_image"/>
 
