--- a/app/src/main/res/layout/item_extend_view.xml
+++ b/app/src/main/res/layout/item_extend_view.xml
@@ -1,11 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:id="@+id/custom_input_device"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<!--    <Button-->
-<!--        -->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"/>-->
+    <androidx.appcompat.widget.AppCompatEditText
+        android:layout_marginHorizontal="20dp"
+        android:id="@+id/custom_input_device_id"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:hint="@string/custom_input_device_id"
+        android:textCursorDrawable="@null"
+        android:inputType="number"
+        android:textColor="@color/main_color_primary_variant"
+        android:textColorHint="@color/second_color_variant"
+        android:theme="@style/editTextLine"
+        android:layout_height="40dp"/>
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:layout_marginHorizontal="20dp"
+        android:textCursorDrawable="@null"
+        android:id="@+id/custom_input_device_name"
+        android:textColorHint="@color/second_color_variant"
+        app:layout_constraintTop_toBottomOf="@id/custom_input_device_id"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:theme="@style/editTextLine"
+        android:textColor="@color/main_color_primary_variant"
+        android:hint="@string/custom_input_device_name"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
