--- a/app/src/main/res/layout/fragment_exhibit.xml
+++ b/app/src/main/res/layout/fragment_exhibit.xml
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background_color"
-        tools:context=".ui.home.exhibit.ExhibitFragment">
+        tools:context=".ui.home.exhibit.ExhibitFragment"
+        android:focusable="true">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/exhibit_toolbar"
