--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -4,17 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
-            type="com.example.servicecreate.ui.setting.SettingViewModel" />
+            type="com.example.servicecreate.ui.home.home.HomeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background_color"
-        tools:context=".ui.setting.SettingFragment">
+        tools:context=".ui.home.setting.SettingFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/setting_user_show"
@@ -29,7 +28,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/setting_usericon"
+                android:id="@+id/setting_user_icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:elevation="@dimen/ui_elevation_height"
@@ -52,7 +51,7 @@
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@id/setting_usericon"
+                app:layout_constraintStart_toEndOf="@id/setting_user_icon"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -65,12 +64,13 @@
                 android:textColor="@color/icon_color"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/setting_usericon"
+                app:layout_constraintStart_toEndOf="@id/setting_user_icon"
                 app:layout_constraintTop_toBottomOf="@id/setting_username" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
+            android:id="@+id/setting_line"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/setting_user_show"
@@ -80,6 +80,113 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"/>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/setting_person"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/setting_line"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/setting_person_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:elevation="@dimen/ui_elevation_height"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@color/background_color"
+                app:tint="@color/icon_color"
+                android:src="@drawable/ic_outline_person_24"
+                app:shapeAppearance="@style/RoundedStyle"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp"/>
+
+            <TextView
+                android:textSize="19sp"
+                android:text="@string/setting_person_text"
+                android:textColor="@color/black"
+                android:layout_marginStart="20dp"
+                app:layout_constraintStart_toEndOf="@id/setting_person_icon"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/setting_gateway_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/setting_person_next"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:tint="@color/icon_color"
+                android:src="@drawable/ic_baseline_navigate_next_24"
+                app:shapeAppearance="@style/RoundedStyle"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/setting_gateway"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:clickable="true"
+            app:layout_constraintTop_toBottomOf="@id/setting_person"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/setting_gateway_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:elevation="@dimen/ui_elevation_height"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@color/background_color"
+                app:tint="@color/icon_color"
+                android:src="@drawable/ic_baseline_insights_24"
+                app:shapeAppearance="@style/RoundedStyle"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp"/>
+
+            <TextView
+                android:textSize="19sp"
+                android:text="@string/setting_gateway_text"
+                android:textColor="@color/black"
+                android:layout_marginStart="20dp"
+                app:layout_constraintStart_toEndOf="@id/setting_gateway_icon"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/setting_person_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/setting_gateway_next"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:tint="@color/icon_color"
+                android:src="@drawable/ic_baseline_navigate_next_24"
+                app:shapeAppearance="@style/RoundedStyle"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
