--- a/app/src/main/res/layout/fragment_wisdom.xml
+++ b/app/src/main/res/layout/fragment_wisdom.xml
@@ -1,100 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
             name="viewModel"
-            type="com.example.servicecreate.ui.home.home.HomeViewModel" />
+            type="com.example.servicecreate.ui.home.wisdom.WisdomViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:clickable="true"
+        android:background="@color/background_color"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background_color"
-        tools:context=".ui.home.setting.SettingFragment">
+        android:focusable="true"
+        tools:context=".ui.home.wisdom.WisdomFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/setting_user_show"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/wisdom_toolbar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/white"
+            app:navigationIconTint="@color/main_color_primary_secondary"
+            app:title="智慧生活"
+            app:titleCentered="true"
             android:elevation="@dimen/ui_elevation_height"
-            android:paddingHorizontal="30dp"
-            android:paddingTop="30dp"
-            android:paddingBottom="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/setting_user_icon"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:elevation="@dimen/ui_elevation_height"
-                android:scaleType="centerCrop"
-                android:src="@drawable/icon"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:shapeAppearance="@style/RoundedStyle"
-                app:strokeColor="@color/white"
-                app:strokeWidth="1dp" />
-
-            <TextView
-                android:id="@+id/setting_username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:elevation="@dimen/ui_elevation_height"
-                android:maxLines="1"
-                android:text="@string/home_username_default"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@id/setting_user_icon"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/setting_user_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:maxLines="1"
-                android:text="@string/home_username_default"
-                android:textColor="@color/icon_color"
-                android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/setting_user_icon"
-                app:layout_constraintTop_toBottomOf="@id/setting_username" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <View
-            android:id="@+id/setting_line"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/setting_user_show"
-            android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="25dp"
-            android:background="@color/fill_bg_color"
+            app:navigationContentDescription="返回上一级"
+            app:navigationIcon="@drawable/ic_outline_navigate_before_24"
+            app:titleTextColor="@color/main_color_primary_secondary"
             android:layout_width="match_parent"
-            android:layout_height="1dp"/>
+            android:layout_height="wrap_content" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/setting_person"
+            android:id="@+id/wisdom_indoor"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:paddingStart="30dp"
-            android:paddingEnd="30dp"
+            android:layout_height="60dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/setting_line"
+            app:layout_constraintTop_toBottomOf="@id/wisdom_toolbar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/setting_person_icon"
+                android:id="@+id/wisdom_indoor_icon"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -102,26 +55,80 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="@color/background_color"
-                app:tint="@color/icon_color"
-                android:src="@drawable/ic_outline_person_24"
+                app:tint="@color/main_color_primary_variant"
+                android:src="@drawable/ic_outline_house_24"
                 app:shapeAppearance="@style/RoundedStyle"
                 app:strokeColor="@color/white"
                 app:strokeWidth="1dp"/>
 
             <TextView
                 android:textSize="19sp"
-                android:text="@string/setting_person_text"
+                android:text="@string/wisdom_indoor_text"
                 android:textColor="@color/black"
                 android:layout_marginStart="20dp"
-                app:layout_constraintStart_toEndOf="@id/setting_person_icon"
+                app:layout_constraintStart_toEndOf="@id/wisdom_indoor_icon"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:id="@+id/setting_gateway_text"
+                android:id="@+id/wisdom_indoor_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/setting_person_next"
+                android:id="@+id/wisdom_indoor_next"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:tint="@color/icon_color"
+                android:src="@drawable/ic_baseline_navigate_next_24"
+                app:shapeAppearance="@style/RoundedStyle"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/wisdom_outdoor"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/wisdom_indoor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/wisdom_outdoor_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:elevation="@dimen/ui_elevation_height"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@color/background_color"
+                app:tint="@color/main_color_primary_variant"
+                android:src="@drawable/ic_baseline_directions_car_24"
+                app:shapeAppearance="@style/RoundedStyle"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp"/>
+
+            <TextView
+                android:textSize="19sp"
+                android:text="@string/wisdom_outdoor_text"
+                android:textColor="@color/black"
+                android:layout_marginStart="20dp"
+                app:layout_constraintStart_toEndOf="@id/wisdom_outdoor_icon"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/wisdom_outdoor_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/wisdom_outdoor_next"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -135,20 +142,19 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/setting_gateway"
+            android:id="@+id/wisdom_sleep"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:paddingStart="30dp"
-            android:paddingEnd="30dp"
+            android:layout_height="60dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
-            android:clickable="true"
-            app:layout_constraintTop_toBottomOf="@id/setting_person"
+            app:layout_constraintTop_toBottomOf="@id/wisdom_outdoor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/setting_gateway_icon"
+                android:id="@+id/wisdom_sleep_icon"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -156,26 +162,26 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="@color/background_color"
-                app:tint="@color/icon_color"
-                android:src="@drawable/ic_baseline_insights_24"
+                app:tint="@color/main_color_primary_variant"
+                android:src="@drawable/ic_baseline_single_bed_24"
                 app:shapeAppearance="@style/RoundedStyle"
                 app:strokeColor="@color/white"
                 app:strokeWidth="1dp"/>
 
             <TextView
                 android:textSize="19sp"
-                android:text="@string/setting_gateway_text"
+                android:text="@string/wisdom_sleep_text"
                 android:textColor="@color/black"
                 android:layout_marginStart="20dp"
-                app:layout_constraintStart_toEndOf="@id/setting_gateway_icon"
+                app:layout_constraintStart_toEndOf="@id/wisdom_sleep_icon"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:id="@+id/setting_person_text"
+                android:id="@+id/wisdom_sleep_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/setting_gateway_next"
+                android:id="@+id/wisdom_sleep_next"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -188,74 +194,8 @@
                 app:strokeWidth="1dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/setting_wisdom"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:paddingStart="30dp"
-            android:paddingEnd="30dp"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
-            android:clickable="true"
-            app:layout_constraintTop_toBottomOf="@id/setting_gateway"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/setting_wisdom_icon"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:elevation="@dimen/ui_elevation_height"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@color/background_color"
-                app:tint="@color/icon_color"
-                android:src="@drawable/ic_outline_sentiment_satisfied_24"
-                app:shapeAppearance="@style/RoundedStyle"
-                app:strokeColor="@color/white"
-                app:strokeWidth="1dp"/>
-
-            <TextView
-                android:textSize="19sp"
-                android:text="@string/setting_wisdom_text"
-                android:textColor="@color/black"
-                android:layout_marginStart="20dp"
-                app:layout_constraintStart_toEndOf="@id/setting_wisdom_icon"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:id="@+id/setting_wisdom_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/setting_wisdom_next"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                app:tint="@color/icon_color"
-                android:src="@drawable/ic_baseline_navigate_next_24"
-                app:shapeAppearance="@style/RoundedStyle"
-                app:strokeColor="@color/white"
-                app:strokeWidth="1dp"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <Button
-            android:id="@+id/setting_logout"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/retangle_bg"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginBottom="80dp"
-            android:textSize="20dp"
-            android:textColor ="@color/main_color"
-            android:text="@string/setting_logout_text"
-            android:backgroundTint="@color/second_color_variant"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
