--- a/app/src/main/res/layout/fragment_door_lock.xml
+++ b/app/src/main/res/layout/fragment_door_lock.xml
@@ -83,6 +83,18 @@
 
         </com.google.android.material.card.MaterialCardView>
 
+        <com.ethanco.lib.PasswordInput
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/doorlock_passwordInput_first"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            app:boxCount="4"
+            android:layout_marginHorizontal="30dp"
+            app:focusedColor="@color/main_color_primary_variant"
+            app:notFocusedColor="@color/second_color" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
