--- a/app/src/main/res/layout/fragment_wisdom.xml
+++ b/app/src/main/res/layout/fragment_wisdom.xml
@@ -194,6 +194,59 @@
                 app:strokeWidth="1dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/wisdom_random"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/wisdom_sleep"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/wisdom_random_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:elevation="@dimen/ui_elevation_height"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@color/background_color"
+                app:tint="@color/second_color"
+                android:src="@drawable/ic_baseline_scatter_plot_24"
+                app:shapeAppearance="@style/RoundedStyle"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp"/>
+
+            <TextView
+                android:textSize="19sp"
+                android:text="@string/wisdom_random_text"
+                android:textColor="@color/black"
+                android:layout_marginStart="20dp"
+                app:layout_constraintStart_toEndOf="@id/wisdom_random_icon"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/wisdom_random_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/wisdom_random_next"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:tint="@color/icon_color"
+                android:src="@drawable/ic_baseline_navigate_next_24"
+                app:shapeAppearance="@style/RoundedStyle"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
