--- a/app/src/main/res/layout/fragment_wisdom.xml
+++ b/app/src/main/res/layout/fragment_wisdom.xml
@@ -234,6 +234,20 @@
                 android:layout_height="wrap_content"/>
 
             <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/wisdom_random_add"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toStartOf="@id/wisdom_random_next"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:tint="@color/icon_color"
+                android:src="@drawable/ic_baseline_add_24"
+                app:shapeAppearance="@style/RoundedStyle"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp"/>
+
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/wisdom_random_next"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -245,9 +259,19 @@
                 app:shapeAppearance="@style/RoundedStyle"
                 app:strokeColor="@color/white"
                 app:strokeWidth="1dp"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:paddingTop="20dp"
+            android:id="@+id/wisdom_random_list"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:visibility="gone"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/wisdom_random"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
