--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -194,6 +194,48 @@
                             </androidx.appcompat.widget.AppCompatTextView>
 
                         </androidx.appcompat.widget.LinearLayoutCompat>
+
+                        <androidx.appcompat.widget.LinearLayoutCompat
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginHorizontal="15dp"
+                            android:layout_marginBottom="10dp">
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:gravity="center"
+                                android:id="@+id/home_CardView_quality2"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:textColor="@color/white"
+                                android:layout_gravity="center"
+                                android:textSize="16sp"
+                                android:layout_height="wrap_content">
+                            </androidx.appcompat.widget.AppCompatTextView>
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:gravity="center"
+                                android:id="@+id/home_CardView_humidity2"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:textColor="@color/white"
+                                android:layout_gravity="center"
+                                android:textSize="16sp"
+                                android:layout_height="wrap_content">
+                            </androidx.appcompat.widget.AppCompatTextView>
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/home_CardView_visibility2"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:textColor="@color/white"
+                                android:layout_gravity="center"
+                                android:textSize="16sp"
+                                android:gravity="center"
+                                android:layout_height="wrap_content">
+                            </androidx.appcompat.widget.AppCompatTextView>
+
+                        </androidx.appcompat.widget.LinearLayoutCompat>
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
                 </androidx.cardview.widget.CardView>
