--- a/app/src/main/res/layout/item_exhibit_room_card.xml
+++ b/app/src/main/res/layout/item_exhibit_room_card.xml
@@ -15,9 +15,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-
-            >
+            android:layout_marginBottom="10dp">
 
             <ImageView
                 android:id="@+id/item_card_room_image"
@@ -78,9 +76,18 @@
                 android:text="No Comsumption"
                 android:textColor="@color/icon_color"
                 android:textSize="14sp"
-
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/item_card_room_number"/>
+
+            <View
+                app:layout_constraintStart_toEndOf="@id/item_card_room_number"
+                app:layout_constraintTop_toBottomOf="@+id/item_card_room_name"
+                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="10dp"
+                android:background="@color/green"
+                android:layout_width="7dp"
+                android:layout_height="7dp"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </layout>
