--- a/app/src/main/res/layout/fragment_led.xml
+++ b/app/src/main/res/layout/fragment_led.xml
@@ -76,6 +76,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:thumbTextPadding="1dp"
+                    android:checked="true"
                     app:thumbTint="@color/white"
                     app:track="@drawable/switch_bg" />
 
