--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -123,7 +123,7 @@
             android:elevation="@dimen/ui_elevation_height"
             android:fadingEdge="horizontal"
             android:hint="@string/auth_et_confidence_hint_text"
-            android:inputType="numberPassword"
+            android:inputType="textPassword"
             android:paddingHorizontal="10dp"
             android:textColor="@color/icon_color"
             android:textCursorDrawable="@color/second_color"
