--- a/app/src/main/res/layout/fragment_curtain.xml
+++ b/app/src/main/res/layout/fragment_curtain.xml
@@ -10,6 +10,7 @@
         android:paddingTop="20dp"
         tools:context=".ui.controller.curtain.CurtainFragment">
 
+
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/curtain_cardView"
             android:layout_width="match_parent"
@@ -79,12 +80,21 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.card.MaterialCardView>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/curtain"
+            android:padding="50dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/curtain_cardView"
+            android:layout_width="wrap_content"
+            android:src="@drawable/ic_smart_curtain"
+            android:layout_height="wrap_content"/>
 
         <com.google.android.material.button.MaterialButtonToggleGroup
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/curtain_cardView"
+            app:layout_constraintTop_toBottomOf="@id/curtain"
             android:id="@+id/toggleGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
