--- a/app/src/main/res/layout/item_home_room_card.xml
+++ b/app/src/main/res/layout/item_home_room_card.xml
@@ -67,6 +67,20 @@
                 app:layout_constraintTop_toBottomOf="@+id/item_card_room_name"/>
 
             <TextView
+                android:visibility="gone"
+                android:id="@+id/item_card_light_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="1dp"
+                android:text="6 Devices"
+                android:textColor="@color/icon_color"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/item_card_room_number"/>
+
+            <TextView
                 android:id="@+id/item_card_room_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -76,7 +90,7 @@
                 android:textColor="@color/icon_color"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/item_card_room_number"/>
+                app:layout_constraintTop_toBottomOf="@+id/item_card_light_number"/>
 
             <View
                 android:id="@+id/item_card_state"
