--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -242,6 +242,60 @@
                 app:strokeWidth="1dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/setting_watch"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:clickable="true"
+            app:layout_constraintTop_toBottomOf="@id/setting_wisdom"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/setting_watch_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:elevation="@dimen/ui_elevation_height"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@color/background_color"
+                app:tint="@color/icon_color"
+                android:src="@drawable/outline_watch_24"
+                app:shapeAppearance="@style/RoundedStyle"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp"/>
+
+            <TextView
+                android:textSize="19sp"
+                android:text="@string/setting_watch_text"
+                android:textColor="@color/black"
+                android:layout_marginStart="20dp"
+                app:layout_constraintStart_toEndOf="@id/setting_watch_icon"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/setting_watch_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/setting_watch_next"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:tint="@color/icon_color"
+                android:src="@drawable/ic_baseline_navigate_next_24"
+                app:shapeAppearance="@style/RoundedStyle"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <Button
             android:id="@+id/setting_logout"
             app:layout_constraintBottom_toBottomOf="parent"
